# cmakeDemo

./: README.txt
exe/: CMakeLists.txt  vimrc.local
exe/src/: CMakeLists.txt  group.hpp  student.hpp
sharedLib/: CMakeLists.txt  vimrc.local
sharedLib/lib/: libserver.so.2.1
sharedLib/lib/dev/: libserver.so.2.2
sharedLib/src/: CMakeLists.txt  client.c  server.h  server1.c  server1_dev.c  server2.c  server2_dev.c  tester.c
staticLib/: CMakeLists.txt  vimrc.local
staticLib/src/: CMakeLists.txt  client.c  server.h  server1.c  server2.c
twoExes/: CMakeLists.txt
twoExes/src/: CMakeLists.txt  group.cpp  main.cpp  secondHello.cpp  student.cpp
